--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ data_set/
 .data_set/
 temp/
 .temp/
+.save/
+.summary/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
